--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,12 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --secundario: #2a4a50;
+  --secundario-light: #233f4452;
+  --secundario-dark: #182b2e;
+  --primario: #1A73E8;
+  --primario-light: #1d7fff44;
+  --primario-dark: #123f7a;
 }
 
 .dark {
